explorer: fix broken layout
Applying this control tweak globally broke the explorer layout. So we
now apply it to settings only.

--- a/src/activities/activities.scss
+++ b/src/activities/activities.scss
@@ -39,9 +39,5 @@
             height: 100%;
             z-index: bp.$pt-z-index-overlay;
         }
-
-        .#{bp.$ns}-control {
-            max-width: bp.$pt-grid-size * 20;
-        }
     }
 }
